--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <h1>Pete Magadan</h1>
   <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img src="./images/happy-ice-cream.gif" />
   <p>This is Brian's change</p>
 </body>
  
